# docs/swagger.json
@@ -130,7 +130,7 @@
                 }
             }
         },
-        "/datakinerjaopd/list/{kode_opd}/{jenis_data_id}": {
+        "/datakinerjaopd/list/{kode_opd}": {
             "get": {
                 "description": "Get list of Data Kinerja OPD filtered by jenis data",
                 "consumes": [
@@ -148,13 +148,6 @@
                         "type": "string",
                         "description": "Kode OPD",
                         "name": "kode_opd",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Jenis Data ID",
-                        "name": "jenis_data_id",
                         "in": "path",
                         "required": true
                     }
@@ -399,7 +392,7 @@
                 }
             }
         },
-        "/datakinerjapemda/list/{jenis_data_id}": {
+        "/datakinerjapemda/list/": {
             "get": {
                 "description": "Get list of Data Kinerja Pemda filtered by jenis data",
                 "consumes": [
@@ -412,15 +405,6 @@
                     "Data Kinerja Pemda"
                 ],
                 "summary": "List Data Kinerja Pemda",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Jenis Data ID",
-                        "name": "jenis_data_id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -435,7 +419,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/web.DataKinerjaPemdaResponse"
+                                                "$ref": "#/definitions/web.JenisDataPemdaResponse"
                                             }
                                         }
                                     }
@@ -1324,6 +1308,23 @@
                     "type": "string"
                 },
                 "nama_opd": {
+                    "type": "string"
+                }
+            }
+        },
+        "web.JenisDataPemdaResponse": {
+            "type": "object",
+            "properties": {
+                "data_kinerja": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/web.DataKinerjaPemdaResponse"
+                    }
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "jenis_data": {
                     "type": "string"
                 }
             }
